--- a/css/style.css
+++ b/css/style.css
@@ -21,14 +21,6 @@
 /* ============================================= */
 /*         Base style colors                     */
 /* ============================================= */
-.secondary-purple {
-  background-color: #4a0e99;
-}
-
-.secondary-light-purple {
-  background-color: #a792ff;
-}
-
 /* ============================================= */
 /*         Font stacks                           */
 /* ============================================= */
@@ -36,44 +28,35 @@
 /*         Font weights                          */
 /* ============================================= */
 html,
-body,
-.header {
+body {
   background-color: #f8f9fa;
 }
 
 .button {
+  background-color: #ffffff;
+  color: #1a1a1a;
+}
+
+.button-alt {
+  color: #ffffff;
+  background-color: transparent;
+}
+
+.button,
+.button-alt {
+  font-weight: 500;
   display: inline-block;
   padding: 0.35em 1.2em;
-  border: 4px solid #2182bf;
   margin: 0 0.3em 0.3em 0;
   border-radius: 0.12em;
   box-sizing: border-box;
   text-decoration: none;
-  font-family: "Fira Code", monospace;
-  font-weight: 500;
-  color: #1a1a1a;
-  background-color: #ffffff;
   text-align: center;
   transition: all 0.2s;
 }
 
 .button:hover {
   background-color: #2182bf;
-}
-
-.button-alt {
-  display: inline-block;
-  padding: 0.35em 1.2em;
-  border: 4px solid #ffffff;
-  margin: 0 0.3em 0.3em 0;
-  border-radius: 0.12em;
-  box-sizing: border-box;
-  text-decoration: none;
-  font-family: "Fira Code", monospace;
-  font-weight: 500;
-  color: #ffffff;
-  text-align: center;
-  transition: all 0.2s;
 }
 
 .button-alt:hover {
@@ -86,10 +69,39 @@ body,
   border-top: 8px solid #344d5e;
 }
 
+.border-primary-color {
+  border: 4px solid #2182bf;
+}
+
+.border-white {
+  border: 4px solid #2182bf;
+}
+
+.navbar,
+.header {
+  background-color: #ffffff;
+}
+
+/* hero banner bg color - main element
+event card bg color - second bottom element,
+jobs bg color - second bottom element,
+membership bg color - main element
+footer - top element
+*/
 .bg-primary-color {
   background-color: #2182bf;
 }
 
+/* event card bg color - first bottom element,
+jobs bg color - first bottom element,
+*/
+.bg-primary-color-light {
+  background-color: #2182bf85;
+}
+
+/*event card bg color - main element
+jobs bg color - main element
+*/
 .bg-secondary-color {
   background-color: #6b87f6;
 }
@@ -98,21 +110,20 @@ body,
   background-color: #4f60e5;
 }
 
-.bg-secondary-color {
-  background-color: #6b87f6;
+.quaternary-color {
+  background-color: #4a0e99;
 }
 
-.bg-primary-color {
-  background-color: #2182bf;
+.quaternary-color-light {
+  background-color: #4a0e9962;
 }
 
-.bg-primary-color {
-  background-color: #2182bf;
+.quinary-color {
+  background-color: #a792ff;
 }
 
-.nav-link {
-  font-family: "Fira Code", monospace;
-  font-weight: 600;
+.quinary-color-light {
+  background-color: #a892ff71;
 }
 
 .footer-links {
@@ -150,8 +161,8 @@ body,
   color: #1a1a1a;
 }
 
-.card-title {
-  font-family: "Fira Code", monospace;
+.nav-link {
+  font-weight: 600;
 }
 
 .card-text,
@@ -164,7 +175,11 @@ body,
 .members-headline,
 .main-headline,
 .event-headline h2,
-.training-headline {
+.training-headline,
+.card-title,
+.nav-link,
+.button,
+.button-alt {
   font-family: "Fira Code", monospace;
 }
 
@@ -191,11 +206,6 @@ body,
 .event-headline h2,
 .training-headline {
   font-weight: 400;
-}
-
-.navbar,
-.header {
-  background-color: #ffffff;
 }
 
 .header {
@@ -315,7 +325,6 @@ body,
   z-index: -1;
   position: absolute;
   top: 740px;
-  background-color: #6b87f6;
 }
 @media (min-width: 576px) {
   .background-el-three-fourths-screen-bot-el-one {
@@ -338,7 +347,6 @@ body,
   z-index: -1;
   position: absolute;
   top: 760px;
-  background-color: #a792ff;
 }
 @media (min-width: 576px) {
   .background-el-three-fourths-screen-bot-el-two {
@@ -432,13 +440,11 @@ body,
 .background-el-full-bot-el-one {
   margin-top: -20px;
   height: 20px;
-  background-color: #2182bf85;
   z-index: 1;
 }
 
 .background-el-full-bot-el-two {
   height: 20px;
-  background-color: #2182bf;
   z-index: 1;
 }
 @media (min-width: 576px) {
@@ -553,12 +559,10 @@ body,
 .background-el-three-fourths-screen-left-bot-el-one {
   margin-top: -20px;
   height: 20px;
-  background-color: #6b87f6;
 }
 
 .background-el-three-fourths-screen-left-bot-el-two {
   height: 20px;
-  background-color: #a792ff;
 }
 
 .training-section {
@@ -600,51 +604,54 @@ body,
 }
 
 .training-img {
-  background-image: url("../images/members-photo-60.jpg");
+  background-image: url("../images/training-img.jpg");
   background-repeat: no-repeat;
   background-size: contain;
-  width: 380px;
-  height: 400px;
+  width: 420px;
+  height: 420px;
   z-index: 5;
   position: absolute;
-  top: 400px;
+  top: 420px;
 }
 @media (min-width: 768px) {
   .training-img {
-    top: 40px;
+    width: 460px;
+    height: 460px;
+    top: 20px;
   }
 }
 @media (min-width: 992px) {
   .training-img {
     top: -30px;
-    left: 40px;
-    height: 560px;
-    width: 500px;
+    left: 80px;
+    height: 600px;
+    width: 560px;
   }
 }
 @media (min-width: 1200px) {
   .training-img {
+    left: 140px;
     height: 620px;
     width: 560px;
   }
 }
 
 .jobs-img {
-  background-image: url("../images/members-photo-60.jpg");
+  background-image: url("../images/jobs-img-2.jpg");
   background-repeat: no-repeat;
   background-size: contain;
   width: 380px;
-  height: 400px;
+  height: 380px;
   z-index: 5;
   position: absolute;
-  top: 400px;
+  top: 420px;
 }
 @media (min-width: 768px) {
   .jobs-img {
     top: 40px;
     right: 0px;
-    width: 350px;
-    height: 400px;
+    width: 375px;
+    height: 440px;
   }
 }
 @media (min-width: 992px) {
@@ -657,13 +664,15 @@ body,
 }
 @media (min-width: 1200px) {
   .jobs-img {
-    height: 620px;
-    width: 560px;
+    top: -10px;
+    right: 100px;
+    height: 580px;
+    width: 500px;
   }
 }
 
 .background-el-small {
-  height: 860px;
+  height: 880px;
 }
 @media (min-width: 768px) {
   .background-el-small {
@@ -679,12 +688,10 @@ body,
 .background-el-small-bot-el-one {
   margin-top: -20px;
   height: 20px;
-  background-color: #6b87f6;
 }
 
 .background-el-small-bot-el-two {
   height: 20px;
-  background-color: #a792ff;
 }
 
 .footer-border-space {
