--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,31 @@
 /* ============================================= */
 /*         Font weights                          */
 /* ============================================= */
+/* ============================================= */
+/*         Animations                            */
+/* ============================================= */
+@keyframes bounce-in {
+  0% {
+    transform: translateY(100px);
+    opacity: 0;
+  }
+  40% {
+    transform: translateY(-30px);
+    opacity: 1;
+  }
+  60% {
+    transform: translateY(15px);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+.bounceIn {
+  opacity: 0;
+}
+
 html,
 body {
   background-color: #f8f9fa;
