--- a/scss/style.scss
+++ b/scss/style.scss
@@ -125,8 +125,18 @@ $font-bold: 700;
 	}
 }
 
-.bounceIn {
+.bounceIn,
+.fade {
 	opacity: 0;
+}
+
+@keyframes fade-in {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
 }
 
 //base styles
